Fix Swagger POST PUT body schemas
